--- a/admin/index.html
+++ b/admin/index.html
@@ -70,11 +70,17 @@
         "DHT11":                {"en": "DHT11",                 "de": "DHT11",                      "ru": "DHT11"},
         "DHT22":                {"en": "DHT22",                 "de": "DHT22",                      "ru": "DHT22"},
         "PWM":                  {"en": "PWM",                   "de": "PWM",                        "ru": "ШИМ"},
+        "DS2413":               {"en": "DS2413",                "de": "DS2413",                     "ru": "DS2413"},
+        "Frequency:":           {"en": "Frequency:",            "de": "Frequenz:",                  "ru": "Частота:"},
         "Default state:":       {"en": "Default state:",        "de": "Default Zustand:",           "ru": "По умолчанию:"},
         "off":                  {"en": "off",                   "de": "off",                        "ru": "выкл"},
         "on":                   {"en": "on",                    "de": "on",                         "ru": "вкл"},
+        "Norm":                 {"en": "Norm",                  "de": "Norm",                       "ru": "Норма"},
+        "Low":                  {"en": "Low",                   "de": "Niedrig",                    "ru": "Низкая"},
+        "High":                 {"en": "High",                  "de": "Hoch",                       "ru": "Высокая"},
         "Threshold:":           {"en": "Threshold:",            "de": "Schwellwert:",               "ru": "Порог:"},
         "Hysteresis:":          {"en": "Hysteresis:",           "de": "Hysterese:",                 "ru": "Гистерезис:"},
+        "Smooth:":              {"en": "Smooth:",               "de": "Glatt:",                     "ru": "Плавный:"},
         "Change ip or password": {
             "en": "Change ip or password",
             "de": "IP Adresse oder Kennwort ändern",
@@ -128,7 +134,7 @@
         text += '<td class="tspace"><input class="tvalue" type="text"  data-type="role" data-port="' + index + '" value="' + (portSettings.role || '') + '" style="width: 100%"/></td>';
 
         // type
-        ///text += '<td class="tspace"><select class="tvalue" ' + (((index == 14 || index == 15) && portSettings.pty == 2) ? 'disabled' : '') + ' data-type="pty" data-port="' + index + '" style="width: 100%">';   //NAUJAS
+        ///text += '<td class="tspace"><select class="tvalue" ' + (((index == 14 || index == 15) && portSettings.pty == 2) ? 'disabled' : '') + ' data-type="pty" data-port="' + index + '" style="width: 100%">';
         text += '<td class="tspace"><select class="tvalue" ' + ' data-type="pty" data-port="' + index + '" style="width: 100%">';
         text += '<option value="255" ' + ((portSettings.pty == 255) ? 'selected' : '') + '>' + _('NC')              + '</option>';
         text += '<option value="0" '   + ((portSettings.pty == 0)   ? 'selected' : '') + '>' + _('Input')           + '</option>';
@@ -191,7 +197,7 @@
         text += '<td class="tspace">';
 
         // ecmd(Action) and eth(net action)
-        ///if (portSettings.pty == 0 || portSettings.pty == 2 || (portSettings.pty == 3 && portSettings.d != 1 && portSettings.d != 2)) { ///NAUJAS
+        ///if (portSettings.pty == 0 || portSettings.pty == 2 || (portSettings.pty == 3 && portSettings.d != 1 && portSettings.d != 2)) {
         if (portSettings.pty == 0 || portSettings.pty == 2 || (portSettings.pty == 3 && portSettings.d == 3) || (portSettings.pty == 3 && portSettings.d == 4)) {
             // ecmd(Action)
             text += _('Action:') + ' <input class="tvalue" data-type="ecmd" type="text" data-port="' + index + '" value="' + (portSettings.ecmd || '') + '"  style="width: 70px" maxsize="11"/>';
@@ -201,16 +207,21 @@
 
         //d(default state)
         if (portSettings.pty == 1) {
-            if (portSettings.m) {
-                portSettings.d = 0;
-            } else {
+            ///if (portSettings.m) {
+                ///portSettings.d = 0;
+            ///} else {
+            if (portSettings.m == 0) {
                 text += _('Default state:') + ' <select class="tvalue" data-type="d" data-port="' + index + '">';
                 text += '<option value="0" ' + ((portSettings.d == 0) ? 'selected' : '') + '>' + _('off') + '</option>';
                 text += '<option value="1" ' + ((portSettings.d == 1) ? 'selected' : '') + '>' + _('on') + '</option>';
                 text += '</select>';
-            }
+            ///}
+            } else if (portSettings.m == 1) {
+                text += _('Default state:') + ' <input class="tvalue" data-type="d" type="text" data-port="' + index + '" value="' + (portSettings.d || 0) + '" size=4 maxsize="3"/>';
+            }   
         } else if (portSettings.pty == 0) {
-            text += _('De-bounce:') + ' <input type="checkbox" class="tvalue" data-type="d" data-port="' + index + '"/>';
+            ///text += _('De-bounce:') + ' <input type="checkbox" class="tvalue" data-type="d" data-port="' + index + '"/>';
+            text += _('De-bounce:') + ' <input type="checkbox" class="tvalue" data-type="d" data-port="' + index + '" ' + (portSettings.d   ? 'checked' : '') + '/>';
         }
 
         //Sensor type
@@ -231,8 +242,21 @@
             text += '</select>';
         }
         //pwm
-        if (portSettings.pty == 1 && portSettings.m == 1 && (index == 10 || index == 11 || index == 12 || index == 13 || index == 25  || index == 27  || index == 28)) {     ///NAUJAS
+        if (portSettings.pty == 1 && portSettings.m == 1 && (index == 10 || index == 11 || index == 12 || index == 13 || index == 25  || index == 27  || index == 28)) {
             text += _('PWM:') + ' <input class="tvalue" data-type="pwm" type="text" data-port="' + index + '" value="' + (portSettings.pwm || 0) + '" size=4 maxsize="3"/>';
+            text += ', ' + _('Smooth:') + ' <input type="checkbox" class="tvalue" data-type="misc" data-port="' + index + '" ' + (portSettings.misc   ? 'checked' : '') + '/> ';
+            if (portSettings.misc) {      ///NADO CHTOB V NASTROIKAH PRI CEBOKS OTKRIVALSIA m2
+                text += ' <input class="tvalue" data-type="m2" type="text"  style="width: 70px" data-port="' + index + '" value="' + (portSettings.m2 || 1) + '" maxsize="3"/>';
+            }
+        }
+        
+        //freq
+        if (portSettings.pty == 1 && portSettings.m == 1 && (index == 10 || index == 11 || index == 12 || index == 13 || index == 25  || index == 27  || index == 28)) {
+            text += _('Frequency:') + ' <select class="tvalue" data-type="fr" data-port="' + index + '">';
+                text += '<option value="0" ' + ((portSettings.fr == 0) ? 'selected' : '') + '>' + _('Norm') + '</option>';
+                text += '<option value="1" ' + ((portSettings.fr == 1) ? 'selected' : '') + '>' + _('Low') + '</option>';
+                text += '<option value="2" ' + ((portSettings.fr == 2) ? 'selected' : '') + '>' + _('High') + '</option>';
+                text += '</select>';
         }
 
         //misc
