--- a/admin/index.html
+++ b/admin/index.html
@@ -118,6 +118,11 @@
         "Error":                {"en": "Error",                 "de": "Fehler",                     "ru": "Ошибка"},
         "Find devices":         {"en": "Find devices",          "de": "Suche Geräte",               "ru": "Искать устройства"},
         "Nothing found":        {"en": "Nothing found",         "de": "Nichts gefunden",            "ru": "Ничего не найдено"},
+        "Information will be merged. Are you sure?": {
+            "en": "Information will be merged. Are you sure?",
+            "de": "Informationen werden zusammengeführt. Bist du sicher?",
+            "ru": "Информация будет объединена. Вы уверены?"
+        },
         "PWM:":                 {"en": "PWM:",                  "de": "PWM:",                       "ru": "PWM:"},
         "Sensor type:":         {"en": "Sensor type:",          "de": "Sensortyp:",                 "ru": "Тип сенсора:"},
         "Dev:":                 {"en": "Sensor type:",          "de": "Sensortyp:",                 "ru": "Тип сенсора:"},
