--- a/admin/index.html
+++ b/admin/index.html
@@ -64,7 +64,7 @@
         "Long:":                {"en": "Long:",                 "de": "Lang-Click:",                "ru": "Долгое нажатие:"},
         "Double:":              {"en": "Double:",               "de": "Double-Click:",              "ru": "Двойное нажатие:"},
         "SCL:":                 {"en": "SCL port:",             "de": "SCL port:",                  "ru": "SCL порт:"},
-        "Disp:":                {"en": "Display port:",         "de": "Anzeigen port:",             "ru": "Дисплей порт:"},
+        "Display:":             {"en": "Display port:",         "de": "Anzeigen port:",             "ru": "Дисплей порт:"},
         "not monitored":        {"en": "not monitored",         "de": "nicht beobachtet",           "ru": "не наблюдать"},
         "> threshold":          {"en": "> threshold",           "de": "> Schwellwert",              "ru": "> порога"},
         "< threshold":          {"en": "< threshold",           "de": "< Schwellwert",              "ru": "< порога"},
@@ -293,10 +293,10 @@
         //freq
         if (portSettings.pty == 1 && portSettings.m == 1 && (index == 10 || index == 11 || index == 12 || index == 13 || index == 25  || index == 27  || index == 28)) {
             text += ', ' + _('Frequency:') + ' <select class="tvalue" data-type="fr" data-port="' + index + '">';
-                text += '<option value="0" ' + ((portSettings.fr == 0) ? 'selected' : '') + '>' + _('Norm') + '</option>';
-                text += '<option value="1" ' + ((portSettings.fr == 1) ? 'selected' : '') + '>' + _('Low') + '</option>';
-                text += '<option value="2" ' + ((portSettings.fr == 2) ? 'selected' : '') + '>' + _('High') + '</option>';
-                text += '</select>';
+            text += '<option value="0" ' + ((portSettings.fr == 0) ? 'selected' : '') + '>' + _('Norm') + '</option>';
+            text += '<option value="1" ' + ((portSettings.fr == 1) ? 'selected' : '') + '>' + _('Low') + '</option>';
+            text += '<option value="2" ' + ((portSettings.fr == 2) ? 'selected' : '') + '>' + _('High') + '</option>';
+            text += '</select>';
         }
 
         //misc or hst
@@ -330,8 +330,8 @@
         }
         
         // Displei
-        if (portSettings.pty == 0 || portSettings.pty == 1 || portSettings.pty == 2 || (portSettings.pty == 3 && portSettings.d != 5) || (portSettings.pty == 4 && (portSettings.m == 0 || (portSettings.m == 1 && portSettings.d != 4)))) {
-            text += ', ' + _('Disp:') + ' <input class="tvalue" data-type="disp" type="text" style="width: 30px" data-port="' + index + '" value="' + (portSettings.disp || '') + '" maxsize="2"/>';
+        if (portSettings.pty == 0 || portSettings.pty == 1 || portSettings.pty == 2 || portSettings.pty == 3 || (portSettings.pty == 4 && (portSettings.m == 0 || (portSettings.m == 1 && portSettings.d != 4)))) {
+            text += ', ' + _('Display:') + ' <input class="tvalue" data-type="disp" type="text" style="width: 30px" data-port="' + index + '" value="' + (portSettings.disp || '') + '" maxsize="2"/>';
         }
         text += '</td>';
         
@@ -352,7 +352,7 @@
         if (attr == 'm' || attr == 'pty' || ((ports[index].pty == 3 || ports[index].pty == 4) && attr == 'd') || (ports[index].pty == 1 && attr == 'misc')) {
             // if input
             if (ports[index].pty == 0) {
-                // m: 0 - on close, 1 - on change, 2 - on open
+                // m: 0 - on close, 1 - on change, 2 - on open, 3 - clic mode
                 if (ports[index].factor !== undefined) delete ports[index].factor;
                 if (ports[index].offset !== undefined) delete ports[index].offset;
                 if (ports[index].hst    !== undefined) delete ports[index].hst;
@@ -386,7 +386,6 @@
                 if (ports[index].d      === undefined) ports[index].d = 0;
                 if (ports[index].misc   === undefined) ports[index].misc = 0;
                 if (ports[index].disp   === undefined) ports[index].disp = '';
-                if (ports[index].m2     === undefined) ports[index].m2 = 1;
                 if (ports[index].fr     === undefined) ports[index].fr = 0;
                 if (ports[index].m      === undefined) ports[index].m = 0;
                 if (ports[index].m != 1) {
@@ -411,6 +410,7 @@
                 if (ports[index].d      !== undefined) delete ports[index].d;
                 if (ports[index].misc   === undefined) ports[index].misc = 0;
                 if (ports[index].disp   === undefined) ports[index].disp = '';
+                if (ports[index].hst    === undefined) ports[index].hst = 0;
                 if (ports[index].m      === undefined) ports[index].m = 0;
             } else
             if (ports[index].pty == 3) {
@@ -423,18 +423,19 @@
                 if (ports[index].ecmd   === undefined) ports[index].ecmd = '';
                 if (ports[index].af     === undefined) ports[index].af = 0;
                 if (ports[index].naf    === undefined) ports[index].naf = 0;
+                if (ports[index].misc   === undefined) ports[index].misc = 0;
+                if (ports[index].m      === undefined) ports[index].m = 0;
+                if (ports[index].hst    === undefined) ports[index].hst = 0;
+                if (ports[index].disp   === undefined) ports[index].disp = '';
                 if (ports[index].d      === undefined) ports[index].d = 1;
-                if (ports[index].d != 3) {
-                    ports[index].misc = 0;
-                    ports[index].m    = 0;
-                    ports[index].hst  = 0;
-                } else {
-                    if (ports[index].misc   === undefined) ports[index].misc = 0;
-                    if (ports[index].m      === undefined) ports[index].m = 0;
-                    if (ports[index].hst    === undefined) ports[index].hst = 0;
-                }
-                if (ports[index].d == 4) {
-                    if (ports[index].disp   !== undefined) delete ports[index].disp;
+                if (ports[index].d != 3 && ports[index].d != 4) {
+                    if (ports[index].misc   !== undefined) delete ports[index].misc;
+                    if (ports[index].hst    !== undefined) delete ports[index].hst;
+                    if (ports[index].m      !== undefined) delete ports[index].m;
+                    if (ports[index].naf    !== undefined) delete ports[index].naf;
+                    if (ports[index].af     !== undefined) delete ports[index].af;
+                    if (ports[index].eth    !== undefined) delete ports[index].eth;
+                    if (ports[index].ecmd   !== undefined) delete ports[index].ecmd;
                 }
                 if (ports[index].m > 3) ports[index].m = 0;
             } else
@@ -451,6 +452,10 @@
                 if (ports[index].m      === undefined) ports[index].m = 0;
                 if (ports[index].misc   === undefined) ports[index].misc = 0;
                 if (ports[index].d      === undefined) ports[index].d = 0;
+                if (ports[index].disp   === undefined) ports[index].disp = '';
+                if (ports[index].m == 2) {
+                    if (ports[index].disp   !== undefined) delete ports[index].disp;
+                }
             } else {
                 if (ports[index].factor !== undefined) delete ports[index].factor;
                 if (ports[index].offset !== undefined) delete ports[index].offset;
@@ -459,12 +464,15 @@
 
                 if (ports[index].eth    !== undefined) delete ports[index].eth;
                 if (ports[index].ecmd   !== undefined) delete ports[index].ecmd;
+                if (ports[index].naf    !== undefined) delete ports[index].naf;
+                if (ports[index].af     !== undefined) delete ports[index].af;
                 if (ports[index].d      !== undefined) delete ports[index].d;
                 if (ports[index].misc   !== undefined) delete ports[index].misc;
                 if (ports[index].m      !== undefined) delete ports[index].m;
                 if (ports[index].hst    !== undefined) delete ports[index].hst;
                 if (ports[index].fr     !== undefined) delete ports[index].fr;
                 if (ports[index].m2     !== undefined) delete ports[index].m2;
+                if (ports[index].disp   !== undefined) delete ports[index].disp;
             }
 
             showPorts();
