--- a/admin/index.html
+++ b/admin/index.html
@@ -142,7 +142,6 @@
         // name, room, role, pty(type), ecmd(Action), eth(net action), m(mode), d(default state), pwm(0-255), misc (threshold)
         var text = '<tr class="tspace">';
         // index
-        ///text += '<td class="tspace">' + ((index == 14 || index == 15) ? ('A' + (index - 8)) : ('P' + index)) + '</td>';
         text += '<td class="tspace">' + ((index == 37) ? ('P' + index) : ('P' + index)) + '</td>';
         // name
         text += '<td class="tspace"><input class="tvalue" type="text" data-type="name" data-port="' + index + '" value="' + (portSettings.name || '') + '" style="width: 100%"/></td>';
@@ -159,7 +158,6 @@
         text += '<td class="tspace"><input class="tvalue" type="text"  data-type="role" data-port="' + index + '" value="' + (portSettings.role || '') + '" style="width: 100%"/></td>';
 
         // type
-        ///text += '<td class="tspace"><select class="tvalue" ' + (((index == 14 || index == 15) && portSettings.pty == 2) ? 'disabled' : '') + ' data-type="pty" data-port="' + index + '" style="width: 100%">';
         text += '<td class="tspace"><select class="tvalue" ' + ' data-type="pty" data-port="' + index + '" style="width: 100%">';
         text += '<option value="255" ' + ((portSettings.pty == 255) ? 'selected' : '') + '>' + _('NC')              + '</option>';
         text += '<option value="0" '   + ((portSettings.pty == 0)   ? 'selected' : '') + '>' + _('Input')           + '</option>';
@@ -247,15 +245,11 @@
 
         //d(default state)
         if (portSettings.pty == 1) {
-            ///if (portSettings.m) {
-                ///portSettings.d = 0;
-            ///} else {
             if (portSettings.m == 0) {
                 text += _('Default state:') + ' <select class="tvalue" data-type="d" data-port="' + index + '">';
                 text += '<option value="0" ' + ((portSettings.d == 0) ? 'selected' : '') + '>' + _('off') + '</option>';
                 text += '<option value="1" ' + ((portSettings.d == 1) ? 'selected' : '') + '>' + _('on') + '</option>';
                 text += '</select>';
-            ///}
             } else if (portSettings.m == 1) {
                 text += _('Default state:') + ' <input class="tvalue" data-type="d" type="text" data-port="' + index + '" value="' + (portSettings.d || 0) + '" size=4 maxsize="3"/>';
             }   
@@ -281,9 +275,8 @@
             text += '<option value="4" ' + ((portSettings.d == 4) ? 'selected' : '') + '>iButton</option>';
             text += '</select>';
         }
-        //pwm or smooth
+        //smooth
         if (portSettings.pty == 1 && portSettings.m == 1 && (index == 10 || index == 11 || index == 12 || index == 13 || index == 25  || index == 27  || index == 28)) {
-            ///text += _('PWM:') + ' <input class="tvalue" data-type="pwm" type="text" data-port="' + index + '" value="' + (portSettings.pwm || 0) + '" size=4 maxsize="3"/>';
             text += ', ' + _('Smooth:') + ' <input type="checkbox" class="tvalue" data-type="misc" data-port="' + index + '" ' + (portSettings.misc   ? 'checked' : '') + '/> ';
             if (portSettings.misc == 1 || portSettings.misc == true) {
                 text += ' <input class="tvalue" data-type="m2" type="text"  style="width: 70px" data-port="' + index + '" value="' + (portSettings.m2 || 1) + '" maxsize="3"/>';
@@ -314,10 +307,11 @@
         if (portSettings.pty == 4 && portSettings.m == 1) {
             text += _('SCL:') + ' <input class="tvalue" data-type="misc" type="text" style="width: 70px" data-port="' + index + '" value="' + (portSettings.misc || 0) + '" maxsize="3"/>';
             text += ', ' + _('Sensor type:') + ' <select class="tvalue" data-type="d" data-port="' + index + '">';
-            text += '<option value="0" ' + ((portSettings.d == 0) ? 'selected' : '') + '>' + _('Unk') + '</option>';
+            text += '<option value="0" ' + ((portSettings.d == 0) ? 'selected' : '') + '>' + _('ANY') + '</option>';
             text += '<option value="1" ' + ((portSettings.d == 1) ? 'selected' : '') + '>' + _('HTU21D') + '</option>';
             text += '<option value="2" ' + ((portSettings.d == 2) ? 'selected' : '') + '>' + _('BH1750') + '</option>';
             text += '<option value="3" ' + ((portSettings.d == 3) ? 'selected' : '') + '>' + _('TSL2591') + '</option>';
+            text += '<option value="4" ' + ((portSettings.d == 4) ? 'selected' : '') + '>' + _('SSD1306') + '</option>';
             text += '<option value="20" ' + ((portSettings.d == 20) ? 'selected' : '') + '>' + _('MCP23008') + '</option>';
             text += '</select>';
         }
