--- a/admin/index.html
+++ b/admin/index.html
@@ -76,6 +76,7 @@
         "PWM":                  {"en": "PWM",                   "de": "PWM",                        "ru": "ШИМ"},
         "DS2413":               {"en": "DS2413",                "de": "DS2413",                     "ru": "DS2413"},
         "HTU21D":               {"en": "HTU21D",                "de": "HTU21D",                     "ru": "HTU21D"},
+        "BMP180":               {"en": "BMP180",                "de": "BMP180",                     "ru": "BMP180"},
         "BH1750":               {"en": "BH1750",                "de": "BH1750",                     "ru": "BH1750"},
         "TSL2591":              {"en": "TSL2591",               "de": "TSL2591",                    "ru": "TSL2591"},
         "SSD1306":              {"en": "SSD1306",               "de": "SSD1306",                    "ru": "SSD1306"},
@@ -91,10 +92,13 @@
         "Norm":                 {"en": "Norm",                  "de": "Norm",                       "ru": "Норма"},
         "Low":                  {"en": "Low",                   "de": "Niedrig",                    "ru": "Низкая"},
         "High":                 {"en": "High",                  "de": "Hoch",                       "ru": "Высокая"},
+        "D0":                   {"en": "D0",                    "de": "D0",                         "ru": "D0"},
+        "D1":                   {"en": "D1",                    "de": "D1",                         "ru": "D1"},
         "Threshold:":           {"en": "Threshold:",            "de": "Schwellwert:",               "ru": "Порог:"},
         "Hysteresis:":          {"en": "Hysteresis:",           "de": "Hysterese:",                 "ru": "Гистерезис:"},
         "Smooth:":              {"en": "Smooth:",               "de": "Glatt:",                     "ru": "Плавный:"},
         "Misc:":                {"en": "Misc:",                 "de": "Misc:",                      "ru": "Misc:"},
+        "D1:":                  {"en": "D1 port:",              "de": "D1 port:",                   "ru": "D1 порт:"},
         "Change ip or password": {
             "en": "Change ip or password",
             "de": "IP Adresse oder Kennwort ändern",
@@ -199,6 +203,12 @@
                 '< threshold',
                 '<> threshold'
             ];
+        } else if (portSettings.pty == 3 && portSettings.d == 6) {
+            modes = [
+                'NC',
+                'D0',
+                'D1'
+            ];
         } else if (portSettings.pty == 4) {
             modes = [
                 'NC',
@@ -253,7 +263,6 @@
                 text += _('Default state:') + ' <input class="tvalue" data-type="d" type="text" data-port="' + index + '" value="' + (portSettings.d || 0) + '" size=4 maxsize="3"/>';
             }   
         } else if (portSettings.pty == 0) {
-            ///text += _('De-bounce:') + ' <input type="checkbox" class="tvalue" data-type="d" data-port="' + index + '"/>';
             text += ', ' + _('De-bounce:') + ' <input type="checkbox" class="tvalue" data-type="d" data-port="' + index + '" ' + (portSettings.d   ? 'checked' : '') + '/>';
         }
 
@@ -308,6 +317,7 @@
             text += ', ' + _('Sensor type:') + ' <select class="tvalue" data-type="d" data-port="' + index + '">';
             text += '<option value="0" ' + ((portSettings.d == 0) ? 'selected' : '') + '>' + _('ANY') + '</option>';
             text += '<option value="1" ' + ((portSettings.d == 1) ? 'selected' : '') + '>' + _('HTU21D') + '</option>';
+            text += '<option value="5" ' + ((portSettings.d == 5) ? 'selected' : '') + '>' + _('BMP180') + '</option>';
             text += '<option value="2" ' + ((portSettings.d == 2) ? 'selected' : '') + '>' + _('BH1750') + '</option>';
             text += '<option value="3" ' + ((portSettings.d == 3) ? 'selected' : '') + '>' + _('TSL2591') + '</option>';
             text += '<option value="4" ' + ((portSettings.d == 4) ? 'selected' : '') + '>' + _('SSD1306') + '</option>';
@@ -424,7 +434,9 @@
                 if (ports[index].d != 3 && ports[index].d != 4) {
                     if (ports[index].misc   !== undefined) delete ports[index].misc;
                     if (ports[index].hst    !== undefined) delete ports[index].hst;
-                    if (ports[index].m      !== undefined) delete ports[index].m;
+                    if (ports[index].d != 6) {
+                        if (ports[index].m      !== undefined) delete ports[index].m;
+                    }    
                     if (ports[index].naf    !== undefined) delete ports[index].naf;
                     if (ports[index].af     !== undefined) delete ports[index].af;
                     if (ports[index].eth    !== undefined) delete ports[index].eth;
@@ -795,7 +807,7 @@
                     showMessage(msg.error, _('Error'), 'alert');
                     return;
                 }
-                //OFF;OFF/0;OFF/0;25;temp:45.6;temp:45.6/hum:27
+                //OFF;OFF/0;OFF/0;25;temp:45.6;temp:45.6/hum:27;temp:23.1/press:729
                 var _ports = msg.response ? msg.response.split(';') : [];
                 var settingsPorts =  msg.ports || [];
                 var aPorts = [];
@@ -831,7 +843,6 @@
                         aPorts[p].m       = aPorts[p].m   || 0;
                         aPorts[p].d       = aPorts[p].d   || 0;
                         if (aPorts[p].m == 1) {
-                            ///aPorts[p].pwm     = aPorts[p].pwm  || 0;
                             aPorts[p].fr      = aPorts[p].fr   || 0;
                             aPorts[p].m2      = aPorts[p].m2   || 1;
                             aPorts[p].misc    = aPorts[p].misc || 0;
@@ -863,11 +874,6 @@
                         if (aPorts[p].d == 4) {
                             aPorts[p].role    = ports[p].role || 'state';
                         }
-                    /*} else if (_ports[p].indexOf('temp:') != -1) {  ///NAUJAS
-                        // temperature - internal sensor
-                        aPorts[p].pty     = 4;
-                        aPorts[p].name    = ports[p].name || ('P' + p);
-                        aPorts[p].role    = ports[p].role || 'value.temperature';*/
                     } else
                     if (aPorts[p].pty == 4) {
                         // I2C sensor
@@ -880,11 +886,15 @@
                             if (aPorts[p].d == 1) {
                                 aPorts[p].d       = aPorts[p].d    || (_ports[p].indexOf('hum') != -1 ? 1 : 0);
                                 aPorts[p].misc    = aPorts[p].misc || 0;
-                                //aPorts[p].d       = aPorts[p].d    || 0;
-                                aPorts[p].role    = ports[p].role || 'value.temperature';
+                                aPorts[p].role    = ports[p].role  || 'value.temperature';
                             }
                             if (aPorts[p].d == 2 || aPorts[p].d == 3) {
-                                aPorts[p].role    = ports[p].role || 'value';
+                                aPorts[p].role    = ports[p].role || 'value.light';
+                            }
+                            if (aPorts[p].d == 5) {
+                                aPorts[p].d       = aPorts[p].d    || (_ports[p].indexOf('press') != -1 ? 1 : 0);
+                                aPorts[p].misc    = aPorts[p].misc || 0;
+                                aPorts[p].role    = ports[p].role  || 'value.temperature';
                             }
                             if (aPorts[p].d == 20) {
                                 aPorts[p].role    = ports[p].role || 'button';
